[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/Iventory/inner_panel.png" type="Texture" id=1]
[ext_resource path="res://assets/Iventory/bar.png" type="Texture" id=2]
[ext_resource path="res://Script/Inventory/Inventory_player.gd" type="Script" id=3]
[ext_resource path="res://assets/Font_Textur/Born2bSportyV10.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Script/Inventory/equipment.gd" type="Script" id=5]
[ext_resource path="res://assets/Iventory/x_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/Iventory/main-panel.png" type="Texture" id=7]
[ext_resource path="res://assets/Iventory/x_disabled.png" type="Texture" id=8]
[ext_resource path="res://assets/Iventory/title.png" type="Texture" id=9]
[ext_resource path="res://assets/Iventory/x_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/Iventory/x_normal.png" type="Texture" id=11]
[ext_resource path="res://Scene/InventorySysteme/equipment_slot.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scene/InventorySysteme/inventory.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Font_Textur/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[node name="Inventory_Player" type="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -87.0
margin_right = 72.0
margin_bottom = 87.0
mouse_filter = 1
texture = ExtResource( 7 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
inventory_right = NodePath("inventory_container/inventory_right")
inventory_left = NodePath("inventory_container/inventory_left")
equipment = NodePath("inventory_container/equipment")

[node name="Title" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -47.5
margin_top = -5.0
margin_right = 47.5
margin_bottom = 4.0
mouse_filter = 1
texture = ExtResource( 9 )
region_rect = Rect2( -0.301247, 1.64865, 32.4258, 14.5521 )
patch_margin_left = 8
patch_margin_top = 5
patch_margin_right = 8
patch_margin_bottom = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.2701
margin_top = 1.96431
margin_right = 77.7299
margin_bottom = 17.9643
rect_scale = Vector2( 0.6, 0.4 )
custom_fonts/font = SubResource( 2 )
text = "Player's Inventory"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X_Button" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -10.0894
margin_top = -2.2501
margin_right = 5.91055
margin_bottom = 13.7499
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inventory_container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 10.0
margin_right = -9.0
margin_bottom = -5.0
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equipment" type="NinePatchRect" parent="inventory_container"]
margin_right = 126.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
texture = ExtResource( 1 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
inventory_name = "Equipment"
title = NodePath("bar/inventory_name")
slot_container = NodePath("slot_container")
head = NodePath("slot_container/equipment_head")
chest = NodePath("slot_container/equipment_chest")
offhand = NodePath("slot_container/equipment_offhand")
main_hand = NodePath("slot_container/equipment_main_hand")

[node name="bar" type="TextureRect" parent="inventory_container/equipment"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -19.8581
margin_top = 10.4056
margin_right = 16.1419
margin_bottom = 12.4056
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inventory_name" type="Label" parent="inventory_container/equipment/bar"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -4.63519
margin_top = -8.83324
margin_right = 109.365
margin_bottom = 7.16676
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 3 )
text = "- Equipment -"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot_container" type="Control" parent="inventory_container/equipment"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 14.0
margin_right = -9.0
margin_bottom = -21.0

[node name="equipment_head" parent="inventory_container/equipment/slot_container" instance=ExtResource( 12 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -10.0
margin_right = 10.0
mouse_filter = 1
type = 2

[node name="equipment_chest" parent="inventory_container/equipment/slot_container" instance=ExtResource( 12 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -6.83182
margin_right = 10.0
margin_bottom = 13.1682
mouse_filter = 1
type = 3

[node name="equipment_main_hand" parent="inventory_container/equipment/slot_container" instance=ExtResource( 12 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -47.5
margin_top = -6.83182
margin_right = -27.5
margin_bottom = 13.1682
mouse_filter = 1
type = 4

[node name="equipment_offhand" parent="inventory_container/equipment/slot_container" instance=ExtResource( 12 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 25.6922
margin_top = -6.83182
margin_right = 45.6922
margin_bottom = 13.1682
mouse_filter = 1
type = 5

[node name="inventory_left" parent="inventory_container" instance=ExtResource( 13 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 72.0
margin_right = 126.0
margin_bottom = 112.0
inventory_name = "Left Pocket"
size = 5

[node name="inventory_right" parent="inventory_container" instance=ExtResource( 13 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 114.0
margin_right = 126.0
margin_bottom = 154.0
inventory_name = "Right Pocket"
size = 5

[connection signal="pressed" from="X_Button" to="." method="_on_X_Button_pressed"]
